--- a/_pages/iaso2025.md
+++ b/_pages/iaso2025.md
@@ -56,5 +56,5 @@ The material in this course takes inspiration from the following excellent resso
 | Nov 12     | - Bias-variance decomposition (continued)  <br> - Ridge regression| [Slides lecture 8](../assets/iaso/2025/lecture8.pdf) <br> [Slides lecture 9](../assets/iaso/2025/lecture9.pdf) |
 | Nov 19     | Best subset selection | [Slides](../assets/iaso/2025/lecture10.pdf) |
 | Nov 26     | No class (3h TD)| |
-| Dec 03     | LASSO | [Slides](../assets/iaso/2025/lecture11.pdf) |
+| Dec 03     | - LASSO  <br> - Feature maps | [Slides](../assets/iaso/2025/lecture11.pdf) |
 | Dec 10     | | |
