--- a/_pages/iaso2025.md
+++ b/_pages/iaso2025.md
@@ -57,4 +57,4 @@ The material in this course takes inspiration from the following excellent resso
 | Nov 19     | Best subset selection | [Slides](../assets/iaso/2025/lecture10.pdf) |
 | Nov 26     | No class (3h TD)| |
 | Dec 03     | - LASSO  <br> - Feature maps | [Slides](../assets/iaso/2025/lecture11.pdf) |
-| Dec 10     | | |
+| Dec 09     | - Kernel ridge regression |[Slides](../assets/iaso/2025/lecture12.pdf) |
