--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,28 @@
 ---
 ---
 
+@misc{braun2025fastescapeslowconvergence,
+      title={Fast Escape, Slow Convergence: Learning Dynamics of Phase Retrieval under Power-Law Data}, 
+      author={Guillaume Braun and Bruno Loureiro and Ha Quang Minh and Masaaki Imaizumi},
+      year={2025},
+      eprint={2511.18661},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2511.18661}, 
+      bibtex_show={true},
+}
+
+@misc{han2025opticalkernelmachineprogrammable,
+      title={Optical kernel machine with programmable nonlinearity}, 
+      author={SeungYun Han and Fei Xia and Sylvain Gigan and Bruno Loureiro and Hui Cao},
+      year={2025},
+      eprint={2511.17880},
+      archivePrefix={arXiv},
+      primaryClass={physics.optics},
+      url={https://arxiv.org/abs/2511.17880}, 
+      bibtex_show={true},
+}
+
 @misc{wortsman2025kernelridge,
       title={Kernel ridge regression under power-law data: spectrum and generalization}, 
       author={Arie Wortsman and Bruno Loureiro},
