--- a/_pages/iasd2026.md
+++ b/_pages/iasd2026.md
@@ -45,7 +45,7 @@ When preparing them, I took inspiration in some excellent ressources which are f
 - Matus Telgarsky *Deep learning theory* [lecture notes](https://mjt.cs.illinois.edu/dlt/two.pdf).
 - Romain Couillet and Zhenyu Liao [book](https://polaris.imag.fr/romain.couillet/docs/RMT_ML_Book.pdf) on *Random Matrix Methods for Machine Learning*.
 - Theodor Misiakiewicz and Andrea Montanari [*Six Lectures on Linearized Neural Networks*](https://arxiv.org/abs/2308.13431).
-- Theodor Misiakiewicz lecture notes "[A Short Tutorial on the Computational Complexity of Deep Learning](https://misiakie.github.io/publications/DRAFT_5_Lectures_Misiakiewicz.pdf)".
+- Theodor Misiakiewicz lecture notes [*A Short Tutorial on the Computational Complexity of Deep Learning*](https://misiakie.github.io/publications/DRAFT_5_Lectures_Misiakiewicz.pdf)".
 - Scott Pesme [PhD thesis](https://scottpesme.github.io/Articles/Scott_PhD_Manuscript.pdf) on linear diagonal neural networks.
 
 ## Course Schedule
