--- a/_pages/iasd2026.md
+++ b/_pages/iasd2026.md
@@ -53,7 +53,7 @@ When preparing them, I took inspiration in some excellent ressources which are f
 | Date        | Lecture Topic                | Materials                            |
 |-------------|------------------------------|--------------------------------------|
 | Jan 16     | - Motivation <br>  - Review of ERM         | Chapter 1 of the [notes](../assets/iasd/lecture_notes.pdf) <br> [Homework 1](../assets/iasd/hw/mathsdl_hw1.pdf)|
-| Jan 23     | | |
+| Jan 23     | - Curse of dimensionality <br>  - Aproximation theory | Chapter 2 & 3 of the [notes](../assets/iasd/lecture_notes.pdf)<br> [Homework 2](../assets/iasd/hw/mathsdl_hw2.pdf) |
 | Jan 30     | | |
 | Feb 06     | No class  |  |
 | Feb 07     | | |
