--- a/_pages/iasd2026.md
+++ b/_pages/iasd2026.md
@@ -54,7 +54,7 @@ When preparing them, I took inspiration in some excellent ressources which are f
 |-------------|------------------------------|--------------------------------------|
 | Jan 16     | - Motivation <br>  - Review of ERM         | Chapter 1 of the [notes](../assets/iasd/lecture_notes.pdf) <br> [Homework 1](../assets/iasd/hw/mathsdl_hw1.pdf)|
 | Jan 23     | - Curse of dimensionality <br>  - Aproximation theory | Chapter 2 & 3 of the [notes](../assets/iasd/lecture_notes.pdf) <br> [Homework 2](../assets/iasd/hw/mathsdl_hw2.pdf) |
-| Jan 30     | - Aproximation theory (continued)| Chapter 3 of the [notes](../assets/iasd/lecture_notes.pdf) | [Homework 3](../assets/iasd/hw/mathsdl_hw3.pdf) |
+| Jan 30     | - Aproximation theory (continued)| Chapter 3 of the [notes](../assets/iasd/lecture_notes.pdf) <br>  [Homework 3](../assets/iasd/hw/mathsdl_hw3.pdf) |
 | Feb 06     | No class  |  |
 | Feb 07     | | |
 | Feb 13     | | |
