--- a/_pages/iasd2026.md
+++ b/_pages/iasd2026.md
@@ -60,4 +60,7 @@ When preparing them, I took inspiration in some excellent ressources which are f
 | Feb 13     | | |
 | Feb 20     | | |
 | Feb 27     | | | 
-| Mar 6      | | |
+| Mar 6      | No class (PSL Week)| |
+| Mar 13      | | |
+| Mar 20      | No class | |
+| Mar 27      | Project presentation | |
