--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,39 @@
 ---
 ---
 
+@misc{defilippis2026optimalscalinglawslearning,
+      title={Optimal scaling laws in learning hierarchical multi-index models}, 
+      author={Leonardo Defilippis and Florent Krzakala and Bruno Loureiro and Antoine Maillard},
+      year={2026},
+      eprint={2602.05846},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2602.05846}, 
+      bibtex_show={true},
+}
+
+@misc{nwemadji2026pretraininghurtslorafinetuning,
+      title={When pre-training hurts LoRA fine-tuning: a dynamical analysis via single-index models}, 
+      author={Gibbs Nwemadji and Bruno Loureiro and Jean Barbier},
+      year={2026},
+      eprint={2602.02855},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2602.02855}, 
+      bibtex_show={true},
+}
+
+@misc{zurich2026randommatrixtheorymasked,
+      title={A Random Matrix Theory of Masked Self-Supervised Regression}, 
+      author={Arie Wortsman Zurich and Federica Gerace and Bruno Loureiro and Yue M. Lu},
+      year={2026},
+      eprint={2601.23208},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2601.23208}, 
+      bibtex_show={true},
+}
+
 @misc{braun2025fastescapeslowconvergence,
       title={Fast Escape, Slow Convergence: Learning Dynamics of Phase Retrieval under Power-Law Data}, 
       author={Guillaume Braun and Bruno Loureiro and Ha Quang Minh and Masaaki Imaizumi},
