--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,28 @@
 ---
 ---
 
+@misc{mattei2026welltemperedclassifierelementaryproperties,
+      title={The Well-Tempered Classifier: Some Elementary Properties of Temperature Scaling}, 
+      author={Pierre-Alexandre Mattei and Bruno Loureiro},
+      year={2026},
+      eprint={2602.14862},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2602.14862}, 
+      bibtex_show={true},
+}
+
+@misc{fogliani2026annealingvariationalinferencemitigates,
+      title={Annealing in variational inference mitigates mode collapse: A theoretical study on Gaussian mixtures}, 
+      author={Luigi Fogliani and Bruno Loureiro and Marylou Gabrié},
+      year={2026},
+      eprint={2602.12923},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2602.12923}, 
+      bibtex_show={true},
+}
+
 @misc{defilippis2026optimalscalinglawslearning,
       title={Optimal scaling laws in learning hierarchical multi-index models}, 
       author={Leonardo Defilippis and Florent Krzakala and Bruno Loureiro and Antoine Maillard},
