--- a/_pages/iasd2026.md
+++ b/_pages/iasd2026.md
@@ -56,10 +56,9 @@ When preparing them, I took inspiration in some excellent ressources which are f
 | Jan 23     | - Curse of dimensionality <br>  - Aproximation theory | Chapter 2 & 3 of the [notes](../assets/iasd/lecture_notes.pdf) <br> [Homework 2](../assets/iasd/hw/mathsdl_hw2.pdf) |
 | Jan 30     | - Aproximation theory (continued)| Chapter 3 of the [notes](../assets/iasd/lecture_notes.pdf) <br>  [Homework 3](../assets/iasd/hw/mathsdl_hw3.pdf) |
 | Feb 06     | No class  |  |
-| Feb 07     | - The Neural Tangent Kernel | Chapter 4 of the [notes](../assets/iasd/lecture_notes.pdf) <br>  [Homework 4](../assets/iasd/hw/mathsdl_hw4.pdf) |
-| Feb 13     | - Introduction to RMT | Chapter 5 of the [notes](../assets/iasd/lecture_notes.pdf) <br>  [Homework 5](../assets/iasd/hw/mathsdl_hw5.pdf) |
-| Feb 20     | | |
-| Feb 27     | | | 
+| Feb 13     | - The Neural Tangent Kernel | Chapter 4 of the [notes](../assets/iasd/lecture_notes.pdf) <br>  [Homework 4](../assets/iasd/hw/mathsdl_hw4.pdf) |
+| Feb 20     | - Introduction to RMT | Chapter 5 of the [notes](../assets/iasd/lecture_notes.pdf) <br>  [Homework 5](../assets/iasd/hw/mathsdl_hw5.pdf) |
+| Feb 27     | - Analysis of ridge regression <br> - Double descent and benign overfitting | Chapter 6 of the [notes](../assets/iasd/lecture_notes.pdf) <br> [Homework 6](../assets/iasd/hw/mathsdl_hw6.pdf) |
 | Mar 6      | No class (PSL Week)| |
 | Mar 13      | | |
 | Mar 20      | No class | |
